[package]
name = "jobclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
clap = { version = "3.0.12", features = ["derive"] }
tonic = { version = "0.6.2", features = ["transport", "tls"] }
prost = "0.9.0"
tokio = { version = "1.15.0", features = ["full"] }
tokio-rustls = "0.22"

[build-dependencies]
tonic-build = "0.6.2"