[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.23.1"
anyhow = "1.0.53"
thiserror = "1.0.30"
log = "0.4"
uuid = { version = "0.8.2", features = ["v4"] }
cgroups-rs = "0.2.8"
tokio = { version = "1.15.0", features = ["full"] }
bytes = "1.1.0"